NOT-2733: fix collapsing of sider menu + change trigger style

--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -135,7 +135,7 @@ $inner-padding: 16px
 		flex-direction: column
 		padding: 0
 		.ant-layout-sider-children
-			height: calc(100% - 48px)
+			height: 100%
 		.noti-my-account
 			max-width: calc(100% - 24px)
 			.item-label
@@ -155,13 +155,22 @@ $inner-padding: 16px
 					.ant-menu-item-icon
 						flex: 0 0 auto
 		.ant-layout-sider-trigger
-			background-color: $backgroundColor-notino-grayLight
-			height: 48px
+			position: absolute
+			right: -12px
+			bottom: 100px
+			width: 24px !important
+			height: 24px
+			border-radius: 50%
+			background: $backgroundColor-notino-white
+			line-height: 12px
 			display: flex
 			align-items: center
-			justify-content: flex-end
-			padding-right: 20px
-			position: relative
+			justify-content: center
+			border: 1px solid $borderColor-notino-grayLight
+			box-shadow: $boxShadow-DEFAULT
+			transition: opacity 250ms ease-in-out
+			&:hover
+				box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3), 0 1px 2px 0 rgba(0, 0, 0, 0.15)
 		.noti-account-menu-item
 			position: relative
 			.ant-menu-title-content
@@ -172,6 +181,11 @@ $inner-padding: 16px
 				top: 0
 				.ant-dropdown-trigger
 					padding: 0 0 0 48px
+		&.account-dropdown-opened
+			.ant-layout-sider-trigger
+				opacity: 0
+				pointer-events: none
+				cursor: default
 
 
 .ant-menu-inline-collapsed-tooltip,
